--- a/app/assets/stylesheets/list_view.scss
+++ b/app/assets/stylesheets/list_view.scss
@@ -25,7 +25,9 @@
         box-shadow: -3px 4px 3px -2px rgba(0, 0, 0, 0.11);
     }
 
-    tr:nth-child(even) {background-color: #ececec;}
+    tr:nth-child(even) {
+        background-color: #ececec;
+    }
 
     .gw-b {
         background: none;
@@ -67,4 +69,29 @@
 .t-added {
     width: 10%;
     text-align: right;
+}
+
+.t-game-show {
+    .uk-modal-body {
+        border-radius: 5px;
+        width: 800px;
+    }
+
+    .info-by {
+        color: $dark_grey;
+    }
+
+    .info-year {
+        color: #333333;
+    }
+
+    .gw-b {
+        color: #999;
+        border-color: #c3c3c3;
+    }
+}
+
+.cover-col {
+    width: 200px;
+    margin-right: 20px;
 }
